17368 absolute image paths (#41)
* inline all images

* add svg loader limit; remove file copying from build script

* tweak webpack; add clean up script

* Delete yarn.lock

* remove url loaders and use file loader for images

* update source urls for bitter fonts

* restore webpack with master config and upgrade webpack

* upgrade webpack 4, restore build script

* update webpack config and build scirpt

* add missed exclusion

* add scss overrides

* fix webpack error handling; update urls to use scss variables

* fix asset path value and copy fonts and images to assets in dist

* remove reference to unused image

* remove rimraf

* remove comments

* fix unit test

* add mode none on karma config

* revert change to expanding group

* major version formation

* minor increment version formation

* change dist output structure

* remove docs and design from assets; update npm ignore

* add major release bump

--- a/packages/formation/sass/base/_va.scss
+++ b/packages/formation/sass/base/_va.scss
@@ -999,7 +999,7 @@ li {
     padding: 1rem 0;
   }
 
-  background: url(/img/stars.png) no-repeat center;
+  background: url('#{$formation-image-path}/stars.png') no-repeat center;
   background-size: 11rem auto;
   margin: 1.6rem auto auto;
   padding: 2rem 0 0;
