--- a/packages/formation/sass/modules/_m-dropdown.scss
+++ b/packages/formation/sass/modules/_m-dropdown.scss
@@ -3,7 +3,7 @@
 
   // This should always be a button element
   &-trigger {
-    background: transparent url(/img/arrow-down-white.svg) no-repeat;
+    background: transparent url('#{$formation-image-path}/arrow-down-white.svg') no-repeat;
     background-position: right .8rem center;
     background-size: 1rem 1rem;
     border-radius: 0;
@@ -18,7 +18,7 @@
     &[aria-expanded=true] {
       border-top-color: $color-va-accent;
       background-color: $color-white;
-      background-image: url(/img/arrow-up.svg) !important;
+      background-image: url('#{$formation-image-path}/arrow-up.svg') !important;
       color: $color-base;
 
       path {
