--- a/packages/formation/sass/site/_m-vet-nav.scss
+++ b/packages/formation/sass/site/_m-vet-nav.scss
@@ -200,7 +200,7 @@ body.va-pos-fixed {
   width: 100%;
 
   &:not([href]) {
-    background-image: url(/img/minus-white.svg);
+    background-image: url('#{$formation-image-path}/minus-white.svg');
     @include media($medium-large-screen) {
       background-position: right 1.6rem center;
       padding-right: 3.2rem;
@@ -211,20 +211,20 @@ body.va-pos-fixed {
     @include media($medium-large-screen) {
       color: $color-base;
       background-color: $color-white;
-      background-image: url(/img/arrow-up.svg);
+      background-image: url('#{$formation-image-path}/arrow-up.svg');
       border-top-color: $color-va-accent;
     }
   }
 
   &[aria-expanded='false'] {
-    background-image: url(/img/plus-white.svg);
+    background-image: url('#{$formation-image-path}/plus-white.svg');
 
     &:hover {
       background-color: $color-primary;
     }
 
     @include media($medium-large-screen) {
-      background-image: url(/img/arrow-down-white.svg);
+      background-image: url('#{$formation-image-path}/arrow-down-white.svg');
     }
   }
 
@@ -248,7 +248,7 @@ body.va-pos-fixed {
 }
 
 .vetnav-level2 {
-  background: $color-primary-darkest url(/img/arrow-right-white.svg) right 3rem
+  background: $color-primary-darkest url('#{$formation-image-path}/arrow-right-white.svg') right 3rem
     center no-repeat;
   background-size: 1.4rem auto;
   border-radius: 0;
@@ -261,7 +261,7 @@ body.va-pos-fixed {
   -webkit-font-smoothing: antialiased;
 
   @include media($medium-large-screen) {
-    background: transparent url(/img/arrow-right.svg) right 1rem center
+    background: transparent url('#{$formation-image-path}/arrow-right.svg') right 1rem center
       no-repeat;
     border-color: transparent;
     border-style: solid;
@@ -307,7 +307,7 @@ body.va-pos-fixed {
 }
 
 #vetnav .back-button {
-  background: $color-primary-darker url(/img/arrow-left-white.svg) right 3rem
+  background: $color-primary-darker url('#{$formation-image-path}/arrow-left-white.svg') right 3rem
     center no-repeat;
   background-position: left 1rem center;
   background-size: 1.4rem auto;
