Upgrade USWDS to 1.6.10 (#50)
* Override on focus mixin

* Clean up

* Override on the USWDS focus variable

* Remove focus SCSS

* bump uswds versions

* Correct accidental deletion

* bump minor version

* create alpha version

* bump minor

--- a/packages/formation/sass/base/_b-mixins.scss
+++ b/packages/formation/sass/base/_b-mixins.scss
@@ -88,7 +88,7 @@
 }
 
 @mixin focus-gold-light-outline($offset: 2) {
-  outline: 2px solid $color-gold-light;
+  outline: $focus-outline;
   outline-offset: #{$offset}px;
 }
 
@@ -96,6 +96,10 @@
   background: $color-gold-lighter;
   outline: 2px solid $color-gold-lighter;
   outline-offset: 0;
+}
+
+@mixin focus {
+  @include focus-gold-light-outline;
 }
 
 @mixin linear-gradient-background($from, $to) {
