--- a/packages/formation/sass/core.scss
+++ b/packages/formation/sass/core.scss
@@ -27,6 +27,11 @@
 @import "~uswds/src/stylesheets/core/fonts";
 @import "~uswds/src/stylesheets/core/grid";
 @import "~uswds/src/stylesheets/core/utilities";
+
+// VA mixins. Here so that we can override USWDS mixins.
+// Specifically, the "focus" mixin.
+@import "base/b-mixins";
+
 @import "~uswds/src/stylesheets/core/base";
 
 // ---- U.S. WEB DESIGN STANDARDS ELEMENTS/COMPONENTS --- //
@@ -45,14 +50,12 @@
 
 // ----- VA BASE (VARIABLES/HELPERS) ---- //
 @import "base/b-element-overrides";
-@import "base/b-mixins";
 @import "base/b-functions";
 @import "base/b-utils";
 @import "base/b-font-faces";
 
 // ----- VA GENERAL (MAIN FILE/OTHER) ---- //
 @import "base/va";
-@import "base/focus";
 
 // ----- VA MODULES ---- //
 @import "modules/m-external-link";
