fix margin property

--- a/packages/formation/sass/modules/_m-nav-sidebar.scss
+++ b/packages/formation/sass/modules/_m-nav-sidebar.scss
@@ -128,6 +128,7 @@ $level-3-hover-padding: 8px 12px 8px 30px;
 
   .usa-sidenav-list {
     margin-right: 0;
+    margin-left: 0;
 
     & > li {
       border-top: 0;
