Site design updates

--- a/packages/documentation/src/layouts/module-components.scss
+++ b/packages/documentation/src/layouts/module-components.scss
@@ -1,5 +1,7 @@
 $font-path: "~uswds/src/fonts";
 $image-path: "~uswds/src/img";
+$fa-font-path: "~@fortawesome/fontawesome-free/webfonts";
+$formation-asset-path: '~@department-of-veterans-affairs/formation/assets';
 
 @import "~@department-of-veterans-affairs/formation/sass/core";
 
