--- a/packages/documentation/src/scss/_code.scss
+++ b/packages/documentation/src/scss/_code.scss
@@ -1,7 +1,7 @@
 pre {
   margin-left: 0;
   margin-right: 0;
-  margin-top: 0;
+  margin-top: 1.45rem;
   margin-bottom: 1.45rem;
   font-size: 0.85rem;
   line-height: 1.42;
@@ -16,6 +16,7 @@ code {
   border-radius: 3px;
   font-family: 'SFMono-Regular', Consolas, 'Roboto Mono', 'Droid Sans Mono',
     'Liberation Mono', Menlo, Courier, monospace;
+  font-size: 0.9em !important;
   padding: 0;
   padding-top: 0.2em;
   padding-bottom: 0.2em;
