add cool blue variales

--- a/packages/formation/sass/base/_b-variables.scss
+++ b/packages/formation/sass/base/_b-variables.scss
@@ -89,6 +89,10 @@ $color-focus:                #3e94cf;
 
 $focus-outline:              2px solid $color-gold-light;
 
+$color-cool-blue:           #205493;
+$color-cool-blue-light:     #4773aa;
+$color-cool-blue-lighter:   #8ba6ca;
+$color-cool-blue-lightest:  #dce4ef;
 //===================================
 // DSVA colors
 // Places where DSVA is going rogue!
