remove redundant styling

--- a/packages/documentation/src/scss/_search.scss
+++ b/packages/documentation/src/scss/_search.scss
@@ -74,7 +74,7 @@
 
 .site-search-result-title {
   color: $color-white;
-  padding: units(1) units(1) units(1) units(1);
+  padding: units(1);
   background: $color-primary-darker;
 }
 
