[Loading Indicator] Switch from SVG to CSS (#132)
* Switch to a CSS spinner

* rename animation

* version bump

* switch to units(); scss variables

--- a/packages/formation/sass/modules/_m-loading-indicator.scss
+++ b/packages/formation/sass/modules/_m-loading-indicator.scss
@@ -2,10 +2,22 @@
   text-align: center;
 
   .loading-indicator {
-    min-height: 8em;
-    background: url('#{$formation-image-path}/loading-state.svg') center center no-repeat;
-    background-size: contain;
-    text-align: center;
+    display: block;
+    height: units(8);
+    margin-top: units(2);
+
+    &:after {
+      content: " ";
+      display: inline-block;
+      width: units(7);
+      height: units(7);
+      margin: 1px;
+      border-radius: 50%;
+      border: 8px solid  $color-primary;
+      border-color:  $color-primary transparent  $color-primary transparent;
+      animation: spin 1.2s linear infinite;
+    }
+
     &:focus {
       outline: none;
     }
@@ -13,5 +25,14 @@
 }
 
 .async-loader {
-  padding-bottom: 1em;
+  padding-bottom: units(1);
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
