--- a/packages/formation/sass/base/_va.scss
+++ b/packages/formation/sass/base/_va.scss
@@ -365,6 +365,10 @@ article > h1 {
   font-weight: $font-normal;
   line-height: $lead-line-height;
   max-width: $lead-max-width;
+
+  p {
+    line-height: $lead-line-height;
+  }
 }
 
 .secondary {
