--- a/packages/formation/sass/modules/_m-promo-banner.scss
+++ b/packages/formation/sass/modules/_m-promo-banner.scss
@@ -49,7 +49,7 @@
     @include media($medium-screen) {
       text-align: right;
       border: none;
-      padding: none;
+      padding: 0;
     }
   }
 }
