import in site.scss

--- a/packages/formation/sass/site/site.scss
+++ b/packages/formation/sass/site/site.scss
@@ -29,3 +29,4 @@ $image-path: "~uswds/src/img";
 @import "../icons";
 @import "../modules/m-megamenu";
 @import "../modules/m-hub-page-link-list";
+@import "../modules/m-promo-banner";
