Remove padding-left on large screens

--- a/packages/formation/sass/modules/_m-promo-banner.scss
+++ b/packages/formation/sass/modules/_m-promo-banner.scss
@@ -23,6 +23,9 @@
 .vads-c-promo-banner__content {
   padding: units(1);
   line-height: units(2.5);
+  @include media($medium-screen) {
+    padding-left: 0;
+  }
 }
 
 .vads-c-promo-banner__content-icon {
