--- a/packages/formation/sass/base/_b-mixins.scss
+++ b/packages/formation/sass/base/_b-mixins.scss
@@ -152,6 +152,10 @@
     @include focus-gold-light-outline;
     outline-offset: 0;
   }
+  &:disabled {
+    text-decoration: none;
+    color: $color-gray !important;
+  }
 }
 
 @mixin modal-close-button {
