--- a/packages/formation/sass/base/_b-mixins.scss
+++ b/packages/formation/sass/base/_b-mixins.scss
@@ -154,7 +154,7 @@
   }
   &:disabled {
     text-decoration: none;
-    color: $color-gray !important;
+    color: $color-gray-light !important;
   }
 }
 
