Issue-141: add breakpoint name to "border-bottom" classes

--- a/packages/formation/sass/utilities/_border.scss
+++ b/packages/formation/sass/utilities/_border.scss
@@ -47,7 +47,7 @@ $border_sizes: (
         border-right: #{$size} solid !important;
       }
 
-      .vads-u-border-bottom--#{$size} {
+      .#{$bp_name}\:vads-u-border-bottom--#{$size} {
         border-bottom: #{$size} solid !important;
       }
 
