WIP. Adding a modal window with basic styling and a11y function.

--- a/packages/accessible-react-app/src/css/layout.css
+++ b/packages/accessible-react-app/src/css/layout.css
@@ -35,6 +35,14 @@ img {
   order: 2;
 }
 
+.ac-layout--flex {
+  display: flex;
+}
+
+.ac-layout--justify-between {
+  justify-content: space-between;
+}
+
 @media (min-width: 30em) {
   #grid-container {
     justify-content: space-between;
