--- a/packages/accessible-react-app/src/css/main.css
+++ b/packages/accessible-react-app/src/css/main.css
@@ -1,8 +1,9 @@
-@import "variables.css";
-@import "helpers.css";
-@import "global.css";
-@import "typography.css";
-@import "layout.css";
-@import "skipnav.css";
-@import "homelink.css";
-@import "primarynav.css";
+@import 'variables.css';
+@import 'helpers.css';
+@import 'global.css';
+@import 'typography.css';
+@import 'layout.css';
+@import 'skipnav.css';
+@import 'homelink.css';
+@import 'primarynav.css';
+@import 'forms.css';
