--- a/packages/accessible-react-app/src/css/helpers.css
+++ b/packages/accessible-react-app/src/css/helpers.css
@@ -1,4 +1,28 @@
-[href]:focus {
+/*
+ * ========================================
+ * ELEMENTS
+ * ========================================
+ */
+[href]:focus,
+button:focus,
+input:focus,
+textarea:focus {
   outline: 2px solid #f9c642;
   outline-offset: 2px;
+}
+
+/*
+ * ========================================
+ * CLASSES
+ * ========================================
+ */
+.ac-helper--sr-only {
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
 }
