--- a/packages/accessible-react-app/src/css/global.css
+++ b/packages/accessible-react-app/src/css/global.css
@@ -1,6 +1,6 @@
 html,
 body {
-  font-size: 62.5%;
+  font-size: 62.5%; /* 10px, but honors browser text resizing */
   margin: 0;
   padding: 0;
 }
@@ -14,8 +14,8 @@ body {
 body {
   background: #fff;
   color: #484848;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
-    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
+    Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
   height: 100vh;
   text-rendering: optimizeLegibility;
 }
