--- a/packages/accessible-react-app/src/css/variables.css
+++ b/packages/accessible-react-app/src/css/variables.css
@@ -1,3 +1,8 @@
 :root {
+  --color-purple: rebeccapurple;
+  --color-white: #ffffff;
+
+  --font-weight-700: 700;
+
   --small-screen: 481px !important;
 }
