AnyCorp - Adding a React Modal view (#178)
* Adding inline style for focus halo.

* WIP. Adding a modal window with basic styling and a11y function.

* Adding basic modal form styling

* Adding a LAN host option to Webpack, text edits.

* Adding a yarn command to run on LAN.

--- a/packages/accessible-react-app/src/css/layout.css
+++ b/packages/accessible-react-app/src/css/layout.css
@@ -12,6 +12,7 @@ div {
 
 header {
   align-items: center;
+  background-color: var(--color-purple);
   background-color: rebeccapurple;
   display: flex;
   justify-content: space-between;
@@ -33,6 +34,14 @@ img {
 
 #grid-container aside {
   order: 2;
+}
+
+.ac-layout--flex {
+  display: flex;
+}
+
+.ac-layout--justify-between {
+  justify-content: space-between;
 }
 
 @media (min-width: 30em) {
