Update screenreader only definitions

--- a/packages/formation/sass/base/_va.scss
+++ b/packages/formation/sass/base/_va.scss
@@ -46,11 +46,20 @@ body .row.full {
 }
 
 // Screen Readers
-
+// updated to match definition in
+// packages/formation/sass/utilities/_visibility.scss
 .sr-only {
-  position: absolute;
-  left: -9999em;
-  float: left;
+  border: 0;
+  clip: rect(0, 0, 0, 0);
+  clip-path: inset(50%);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute !important;
+  width: 1px;
+  // Workaround for https://bugzilla.mozilla.org/show_bug.cgi?id=1241631
+  word-wrap: normal !important;
 }
 
 // Remove from print view, incidentally removes from screen readers as well
