Add overflow visible to pagination for focus styling

--- a/packages/formation/sass/modules/_va-pagination.scss
+++ b/packages/formation/sass/modules/_va-pagination.scss
@@ -75,6 +75,10 @@
   }
 }
 
+.va-pagination-inner {
+  overflow: visible;
+}
+
 .va-pagination-inner a {
   border-radius: 1000px;
   display: inline-block;
