Update css to use padding instead

--- a/packages/formation/sass/modules/_va-pagination.scss
+++ b/packages/formation/sass/modules/_va-pagination.scss
@@ -69,14 +69,18 @@
     }
   }
 
+  &-prev,
+  &-next,
+  &-inner {
+    // a11y fix, ensures we show full focus outline: https://github.com/department-of-veterans-affairs/va.gov-team/issues/8790
+    padding-bottom: 4px;
+    padding-top: 4px;
+  }
+
   a {
     line-height: 2;
     text-decoration: none;
   }
-}
-
-.va-pagination-inner {
-  overflow: visible;
 }
 
 .va-pagination-inner a {
