Update the right margin for .panel-bottom-link

--- a/packages/formation/sass/modules/_m-megamenu.scss
+++ b/packages/formation/sass/modules/_m-megamenu.scss
@@ -12,6 +12,7 @@ $marketing-container-height: 380px;
     position: unset;
     height: 25px;
     margin-left: 10px;
+    margin-right: 10px;
     margin-bottom: 3px;
     border: none;
 
