Style nested abbr in visited links

--- a/packages/formation/sass/base/_va.scss
+++ b/packages/formation/sass/base/_va.scss
@@ -100,7 +100,8 @@ a {
   &:active {
     background: $color-link-default-hover;
   }
-  &:visited {
+  &:visited,
+  &:visited abbr {
     color: $color-visited;
   }
 }
