--- a/packages/formation/sass/modules/_m-table.scss
+++ b/packages/formation/sass/modules/_m-table.scss
@@ -2,7 +2,7 @@
 table {
   border: none;
   text-align: left;
-  font-size: .85em;
+  font-size: 0.85em;
 
   @include media($medium-screen) {
     font-size: 1em;
@@ -17,16 +17,16 @@ thead {
 
 caption {
   text-align: left;
-  padding: 0 0 .25em;
+  padding: 0 0 0.25em;
   font-weight: bold;
   font-size: 1.25em;
 }
 
 td,
 th {
-  padding-top: .8em;
-  padding-bottom: .8em;
-  padding-left: .8em;
+  padding-top: 0.8em;
+  padding-bottom: 0.8em;
+  padding-left: 0.8em;
 }
 
 th {
@@ -83,7 +83,7 @@ tr {
       display: block;
 
       // Line between every row. No border above first row.
-      &:nth-child(n+2) {
+      &:nth-child(n + 2) {
         border-top: 1px solid $color-gray-light;
       }
     }
@@ -98,10 +98,23 @@ tr {
 // Use for tables that contain long blocks of text to explain things
 // ex: https://www.vets.gov/education/gi-bill/survivors-dependent-assistance/
 .va-table-explanatory {
-  td, th[scope=row] {
+  td,
+  th[scope='row'] {
     vertical-align: top;
   }
-  ul, ol {
+  ul,
+  ol {
     margin: 0;
+  }
+}
+
+.responsive-table-row-separator {
+  display: none;
+}
+
+@media screen and (max-width: $medium-screen) {
+  .responsive-table-row-separator {
+    display: block;
+    margin: 0.7em 1em 0.5em;
   }
 }
