--- a/packages/formation/sass/modules/_m-responsive-tables.scss
+++ b/packages/formation/sass/modules/_m-responsive-tables.scss
@@ -23,13 +23,7 @@ table.responsive {
   table.responsive {
     border: 0;
     thead {
-      border: none;
-      clip: rect(0, 0, 0, 0);
-      height: 1px;
-      margin: -1px;
-      overflow: hidden;
-      padding: 0;
-      width: 1px;
+      display: none;
     }
 
     tr {
@@ -43,6 +37,7 @@ table.responsive {
     td {
       border: none;
       font-size: 16px;
+      display: flex;
     }
 
     td::before {
