--- a/packages/formation/sass/modules/_m-responsive-tables.scss
+++ b/packages/formation/sass/modules/_m-responsive-tables.scss
@@ -38,7 +38,7 @@ table.responsive {
       border: none;
       font-size: 16px;
       display: flex;
-      flex-wrap: wrap;
+      flex-direction: column;
     }
 
     td::before {
