--- a/packages/formation/sass/modules/_m-responsive-tables.scss
+++ b/packages/formation/sass/modules/_m-responsive-tables.scss
@@ -38,7 +38,15 @@ table.responsive {
       border: none;
       font-size: 16px;
       display: flex;
-      flex-wrap: wrap;
+      flex-direction: column;
+    }
+
+    td:first-child {
+      margin-top: 16px;
+    }
+
+    td:last-child {
+      margin-bottom: 16px;
     }
 
     td::before {
