--- a/packages/accessible-react-app/src/css/global.css
+++ b/packages/accessible-react-app/src/css/global.css
@@ -16,6 +16,7 @@ body {
   color: #484848;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
     Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+  font-size: 1.8rem;
   height: 100vh;
   text-rendering: optimizeLegibility;
 }
