--- a/packages/accessible-react-app/src/css/typography.css
+++ b/packages/accessible-react-app/src/css/typography.css
@@ -11,8 +11,43 @@ ul,
 li,
 label,
 legend {
-  font-size: 1.6rem;
-  line-height: 1.5;
+  font-size: 1.8rem;
+  line-height: 1.625;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin-bottom: 0;
+}
+
+h1 {
+  font-size: 4.8rem;
+  margin: 1rem 0 0;
+}
+
+h2 {
+  font-size: 3.6rem;
+}
+
+h3 {
+  font-size: 2.7rem;
+  margin: 3.6rem 0 0;
+}
+
+h4 {
+  font-size: 2.4rem;
+}
+
+h5 {
+  font-size: 2.1rem;
+}
+
+h6 {
+  font-size: 1.8rem;
 }
 
 a,
