--- a/packages/formation/sass/modules/_m-back-to-top.scss
+++ b/packages/formation/sass/modules/_m-back-to-top.scss
@@ -1,7 +1,7 @@
 //=============================
 // Up To Top Button Styles
 //=============================
-.vsa-top-button-container {
+#top-button-container {
   bottom: 0;
   left: 0;
   pointer-events: none;
