Remove usa-width-three-fourths
This doesn't seem to change anything visually

--- a/packages/formation/sass/modules/_m-back-to-top.scss
+++ b/packages/formation/sass/modules/_m-back-to-top.scss
@@ -14,7 +14,7 @@
     }
   }
 
-  .usa-width-three-fourths.va-top-button-container-relative {
+  .va-top-button-container-relative {
     width: 100%;
   }
 
