--- a/packages/formation/sass/modules/_m-back-to-top.scss
+++ b/packages/formation/sass/modules/_m-back-to-top.scss
@@ -39,6 +39,19 @@
     transition: all 250ms ease-in;
     right: 0;
     width: 44px;
+
+    &::before {
+      font-family: 'Font Awesome 5 Free';
+      font-weight: 900;
+      content: '\F062';
+      margin-right: 0;
+
+      @include media($medium-screen) {
+        margin-right: 1.5em;
+        font-size: 1.5rem;
+      }
+    }
+
     &:hover {
       background-color: $color-black;
     }
