--- a/packages/formation/sass/modules/_m-back-to-top.scss
+++ b/packages/formation/sass/modules/_m-back-to-top.scss
@@ -38,12 +38,14 @@
     right: 0;
     width: 44px;
 
+    //This adds the text to the component so the user doesn't need to do it in the HTML
     &::after {
       @include media($medium-screen) {
         content: 'Back to top';
       }
     }
 
+    // This adds the arrow icon so that the user doesn't have to do it inthe HTML
     &::before {
       font-family: 'Font Awesome 5 Free';
       font-weight: 900;
