Adjust margin between arrow and label

--- a/packages/formation/sass/modules/_m-back-to-top.scss
+++ b/packages/formation/sass/modules/_m-back-to-top.scss
@@ -56,7 +56,7 @@
       font-size: 2rem;
 
       @include media($medium-screen) {
-        margin-right: 0.5em;
+        margin-right: 0.8rem;
         font-size: 1.5rem;
       }
     }
