--- a/packages/formation/sass/modules/_m-form-elements.scss
+++ b/packages/formation/sass/modules/_m-form-elements.scss
@@ -115,6 +115,13 @@ button.form-button-disabled {
   margin-top: 0;
 }
 
+// override width set to calc(100% + 1.9rem) for dates
+.usa-input-error.form-error-date {
+  input, select {
+    width: 100%;
+  }
+}
+
 @include media($medium-large-screen) {
   .form-select-medium {
     max-width: 12rem;
