--- a/packages/formation/sass/modules/_m-action-link.scss
+++ b/packages/formation/sass/modules/_m-action-link.scss
@@ -1,4 +1,4 @@
-a.va-action-link {
+a.va-action-link--blue, a.va-action-link--green {
   &:before {
     font-family: "Font Awesome 5 Free";
     font-weight: 900;
@@ -11,4 +11,12 @@ a.va-action-link {
   }
   font-weight: bold;
   padding: 8px;
+}
+
+a.va-action-link--blue:before {
+  color: $color-link-default;
+}
+
+a.va-action-link--green:before {
+  color: $color-green;
 }
