Set the cursor to be a pointer

--- a/packages/formation/sass/modules/_m-form-elements.scss
+++ b/packages/formation/sass/modules/_m-form-elements.scss
@@ -77,6 +77,9 @@ button.form-button-disabled {
   > input[type="radio"] + label {
     margin-left: 1.7em;
   }
+  > input[type='radio'] {
+    cursor: pointer;
+  }
 }
 
 .form-required-span {
