--- a/packages/formation/sass/modules/_m-button.scss
+++ b/packages/formation/sass/modules/_m-button.scss
@@ -70,16 +70,7 @@ button.short {
   line-height: 1.3;
   margin: 0;
   text-align: left;
-
-  -webkit-transition-duration: 0.3s;
-          transition-duration: 0.3s;
-
-  -webkit-transition-timing-function: ease-in-out;
-          transition-timing-function: ease-in-out;
-
-  // Transition only these properties.
-  -webkit-transition-property: color, background-color, border-color;
-          transition-property: color, background-color, border-color;
+  @include color-transition;
 
   white-space: nowrap;
 
