Remove the horizontal padding for action links

--- a/packages/formation/sass/modules/_m-action-link.scss
+++ b/packages/formation/sass/modules/_m-action-link.scss
@@ -10,7 +10,7 @@ a.vads-c-action-link--blue, a.vads-c-action-link--green, a.vads-c-action-link--w
     height: 0px; // So the height doesn't mess with the focus halo
   }
   font-weight: bold;
-  padding: 8px;
+  padding: 8px 0px;
 }
 
 a.vads-c-action-link--blue:before {
