--- a/packages/documentation/src/scss/_dashboard.scss
+++ b/packages/documentation/src/scss/_dashboard.scss
@@ -5,7 +5,7 @@
 }
 
 .dash-github-image {
-  width: 8rem;
+  width: 5rem;
   border-radius: 5rem;
 }
 
@@ -19,4 +19,8 @@
 
 .dash-false-icon {
   color: red;
+}
+
+.dash-span-right {
+  float: right;
 }
