--- a/packages/documentation/src/scss/_dashboard.scss
+++ b/packages/documentation/src/scss/_dashboard.scss
@@ -1,12 +1,33 @@
-.dash-build-div {
+.dash-build-pannel {
+  background-color: #112e51;
+  font-weight: bold;
+}
+
+.dash-table {
+  margin: 0px;
+}
+
+.dash-table td,
+th {
+  padding-top: 0.2em;
+  padding-bottom: 0.2em;
+}
+
+.dash-github-info {
   display: flex;
-  justify-content: space-around;
-  font-size: 0.85em;
+  align-items: center;
+  justify-content: center;
 }
 
 .dash-github-image {
   width: 5rem;
   border-radius: 5rem;
+}
+
+.dash-github-name {
+  font-size: 0.7em;
+  width: 5rem;
+  padding-left: 0.5em;
 }
 
 .dash-td-center {
