add deprecation message styles

--- a/packages/documentation/src/scss/main.scss
+++ b/packages/documentation/src/scss/main.scss
@@ -15,6 +15,7 @@ $formation-asset-path: '~@department-of-veterans-affairs/formation/assets';
 @import 'reactcomp';
 @import 'search';
 @import 'dashboard';
+@import 'deprecation-message';
 
 .loading-indicator-container {
   .loading-indicator {
