--- a/packages/formation/sass/site/color-palette.scss
+++ b/packages/formation/sass/site/color-palette.scss
@@ -139,6 +139,10 @@ $color-gold-darker: #988530;
         background-color: $color-gray-cool-light;
       }
 
+      &.color-olive {
+        background-color: $color-olive;
+      }
+
       &.color-gold {
         background-color: $color-gold;
       }
