style: remove unused transition property

--- a/packages/formation/sass/modules/_va-pagination.scss
+++ b/packages/formation/sass/modules/_va-pagination.scss
@@ -24,7 +24,7 @@
     line-height: 2;
     padding: 0;
     transition: all 0.3s ease-in-out;
-    transition-property: color, background-color, border-color;
+    transition-property: color, background-color;
   }
 
   // va-pagination-prev and va-pagination-next
